--- a/config/kubernetes/calico-custom.yaml
+++ b/config/kubernetes/calico-custom.yaml
@@ -9,11 +9,11 @@ spec:
   calicoNetwork:
     # Note: The ipPools section cannot be modified post-install.
     ipPools:
-    - blockSize: 26
-      cidr: 192.168.5.0/24
-      encapsulation: VXLANCrossSubnet
-      natOutgoing: Enabled
-      nodeSelector: all()
+      - blockSize: 26
+        cidr: 20.96.0.0/12
+        encapsulation: VXLAN
+        natOutgoing: Enabled
+        nodeSelector: all()
 
 ---
 
